PROJECT (xev)
cmake_minimum_required(VERSION 2.8)
SET(SRC_DIR ./)

SET(SRC_LIST 
    ${SRC_DIR}/xev.c
)
INCLUDE_DIRECTORIES(${SRC_DIR} ../luaheaders)
IF(APPLE)
set(CMAKE_SHARED_LINKER_FLAGS "-undefined dynamic_lookup")
ENDIF(APPLE)
ADD_LIBRARY(xev SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(xev PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(xev PROPERTIES SUFFIX .so)